terraform-lab/vpc/main.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr_block

  tags = {
    Name = "main"
  }
}

#igw
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "igw"
  }
}

#nat
resource "aws_eip" "nat" {
  vpc = true

  tags = {
    Name = "nat"
  }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "private"
  }
}


#subnets
resource "aws_subnet" "private_subnet" {
  count = length(var.private_subnet)
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnet[count.index]
  #count.index = 0, 1, 2
  availability_zone = var.availability_zone[count.index % length(var.availability_zone)]
    # Khu vực cho mạng con lần lặp lại thứ nhất: 0 % 3 = 0 (khu vực thứ 0 trong danh sách)
    # Khu vực cho mạng con lần lặp lại thứ hai: 1 % 3 = 1 (khu vực thứ 1 trong danh sách)
    # Khu vực cho mạng con lần lặp lại thứ ba: 2 % 3 = 2 (khu vực thứ 2 trong danh sách)
    # Khu vực cho mạng con lần lặp lại thứ tư: 3 % 3 = 0 (khu vực thứ 0 trong danh sách)
  tags = {
    "Name"                            = "private_subnet"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/cluster/staging"      = "owned"
  }
}


resource "aws_subnet" "public_subnet" {
  count = length(var.public_subnet)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet[count.index]
  availability_zone       = var.availability_zone[count.index % length(var.availability_zone)]
  map_public_ip_on_launch = true

  tags = {
    "Name"                       = "public_subnet"
    "kubernetes.io/role/elb"     = "1"
    "kubernetes.io/cluster/staging" = "owned"
  }
}


resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_subnet[0].id

  tags = {
    Name = "nat"
  }

  depends_on = [aws_internet_gateway.igw]
}



#route tables
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "public"
  }
}


resource "aws_route_table_association" "public_association" {
  for_each       = { for k, v in aws_subnet.public_subnet : k => v }
  subnet_id      = each.value.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_private" {
  for_each       = { for k, v in aws_subnet.private_subnet : k => v }
  subnet_id      = each.value.id
  route_table_id = aws_route_table.private.id
}
